Mon Jan 30 23:43:42 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/WaitSet.cpp:
        * java/idl2jni/runtime/idl2jni_runtime.h:
        * java/idl2jni/runtime/idl2jni_runtime.cpp:

          Removed compatibility checks for no-longer-supported ACE+TAO versions.

        * tests/DCPS/DCPSInfoRepo/DCPSDataWriterI.cpp:
        * tests/DCPS/DCPSInfoRepo/publisher.cpp:
        * tests/DCPS/DCPSInfoRepo/run_test.pl:
        * tests/DCPS/DCPSInfoRepo/subscriber.cpp:

          Adapted this test to optionally use RTPS Discovery.  Doesn't work yet.

        * java/idl2jni/runtime/15a_compat.h:

          Removed this file.

Mon Jan 30 22:58:04 UTC 2012  Jeff Schmitz  <schmitz_j@ociweb.com>

        * dds/DCPS/RTPS/Sedp.h:
        * dds/DCPS/RTPS/Sedp.cpp:
        * dds/DCPS/RTPS/Spdp.h:
        * dds/DCPS/RTPS/Spdp.cpp:

          Release lock when calling into transport while removing a
            participant.

        * dds/DCPS/RTPS/ParameterListConverter.cpp:

          Fix fuzz.

Mon Jan 30 21:55:36 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/RTPS/Sedp.cpp:

          Fix use of invalid STL iterator (in ignore).

Mon Jan 30 21:27:09 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/RTPS/Sedp.cpp:

          Fixed compile error.

        * bin/dcps_tests.lst:
        * tests/DCPS/SharedTransport/rtps_disc_tcp.ini:
        * tests/DCPS/SharedTransport/run_test.pl:

          SharedTransport test uses two domain participants, so they can't
          use the same RTPS Transport, but we can test with RTPS Discovery.

        * tests/DCPS/SharedTransport/rtps.ini:
        * tests/DCPS/SharedTransport/rtps_disc.ini:

          Removed these files.

Mon Jan 30 19:35:39 UTC 2012  Jeff Schmitz  <schmitz_j@ociweb.com>

        * dds/DCPS/RTPS/Sedp.h:
        * dds/DCPS/RTPS/Sedp.cpp:

          Complete datawriter association with discovered opendds reader after
          reader associates with writer.
